add missing card fields going by the instructions
